Revert "first and last commit, got excited, exercise completed"
This reverts commit 58f219ede039890fbfa27c2e489a2ac747007efc.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ol>
             <li class="list-item">Change the color of all list items with a class of "list-item".
             </li>
-            <li id="special" class="list-item">Change the color of all headings with the class of "heading".</li>
+            <li class="list-item">Change the color of all headings with the class of "heading".</li>
             <li class="list-item">Change the background color of the element with an id.</li>
             <li>Bonus: Add an id to another element and change the background color and change the opacity of the background color.</li>
         </ol>
